--- a/configFiles/generalConfig.json
+++ b/configFiles/generalConfig.json
@@ -2,5 +2,11 @@
   "allowedLexNames": ["noun.artifact",  "noun.object", "noun.substance", "noun.plant", "noun.animal", "noun.food"],
   "pathToWebPagesFolder": "C:/Users/Charles/WebstormProjects/webpages_retrieval/outputData/",
   "pathToGenreDataset": "C:/Users/Charles/WebstormProjects/webpages_labeling/datasetGenreClass.csv",
-  "useOfPredeterminedObjects": false
+  "useOfPredeterminedObjects": false,
+  "configHTML2Text":
+  {
+    "baseElement": "body",
+    "ignoreHref": false,
+    "ignoreImage": false
+  }
 }
