Adding normalization by number of pages (most logical way to normalize)

--- a/configFiles/generalConfig.json
+++ b/configFiles/generalConfig.json
@@ -10,5 +10,5 @@
     "ignoreImage": true
   },
   "limitNumberActivityForDebug": 1000000,
-  "normalizationOrStandardization": "normalization"
+  "normOrStandOrByPage": "byPage"
 }
