Refactoring using rawPOSET and processedPOSET, adding threshold application

--- a/configFiles/generalConfig.json
+++ b/configFiles/generalConfig.json
@@ -10,5 +10,6 @@
     "ignoreImage": true
   },
   "limitNumberActivityForDebug": 1000000,
-  "normOrStandOrByPage": "byPage"
+  "normOrStandOrByPage": "byPage",
+  "thresholdStrongRelations": 0.1
 }
