Adding possibility to use other POS system (seems to be a little better) using finNLP modules

--- a/configFiles/generalConfig.json
+++ b/configFiles/generalConfig.json
@@ -11,5 +11,6 @@
   },
   "limitNumberActivityForDebug": 1000000,
   "normOrStandOrByPage": "byPage",
-  "thresholdStrongRelations": 0.1
+  "thresholdStrongRelations": 0.1,
+  "wordposOrFinNLP": "finNLP"
 }
