Updating getRawPOSETs.js to add synonyms handling and more clarity to code and fixing index< 10 deleting omission

--- a/configFiles/generalConfig.json
+++ b/configFiles/generalConfig.json
@@ -12,5 +12,5 @@
   "limitNumberActivityForDebug": 1000000,
   "normOrStandOrByPage": "byPage",
   "thresholdStrongRelations": 0.1,
-  "wordposOrFinNLP": "finNLP"
+  "considerSeveralTimesWord": true
 }
