--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "clone": "^2.1.2",
     "csv-parse": "^4.12.0",
+    "en-inflectors": "^1.0.12",
     "en-norm": "0.0.3",
     "en-parse": "^1.1.7",
     "en-pos": "^1.0.16",
