Adding configuration options for debug

--- a/configFiles/generalConfig.json
+++ b/configFiles/generalConfig.json
@@ -11,8 +11,12 @@
     "ignoreImage": true
   },
   "limitNumberActivityForDebug": 1000000,
+  "limitNumberPagesByActivityForDebug": 1,
+  "showCleanTextForDebug": true,
+  "indentRawFile": true,
+  "indentProcessedFile": true,
   "normOrStandOrByPage": "byPage",
   "thresholdStrongRelations": 0.51,
-  "useVerb": true,
+  "useVerb": false,
   "useSpecificStruct": true
 }
