Adding possibility to use dep tree to find associated verbs

--- a/configFiles/generalConfig.json
+++ b/configFiles/generalConfig.json
@@ -19,5 +19,6 @@
   "minSupportNode": 0.25,
   "minConfidenceRelation": 0.5,
   "useVerb": true,
+  "useDepTreeToFindAssociatedVerb":  true,
   "useSpecificStruct": true
 }
