--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "processGraphs": "node -r esm processGraphs.js",
     "testPOSET": "node -r esm ./tests/testPOSET.js",
     "testFin": "node -r esm ./tests/testFin.js",
-    "testSelector": "node -r esm ./tests/testSelector.js"
+    "testSelector": "node -r esm ./tests/testSelector.js",
+    "testGSP": "node -r esm ./tests/testGSp.js"
   },
   "keywords": [],
   "author": "Charles Cousyn",
