Refactoring code in a better organization (Some unused entities still exist)

--- a/configFiles/generalConfig.json
+++ b/configFiles/generalConfig.json
@@ -16,8 +16,7 @@
   "indentRawFile": true,
   "indentProcessedFile": true,
   "normOrStandOrByPage": "byPage",
-  "minSupportNode": 0.25,
-  "minConfidenceRelation": 0.5,
+  "minSupport": 0.3,
   "useVerb": true,
   "useDepTreeToFindAssociatedVerb":  true,
   "useSpecificStruct": true
