--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "webpages_poset_extractor",
   "version": "1.0.0",
   "description": "",
-  "main": "getRawGraphs.js",
+  "main": "getSequentialPatterns.js",
   "scripts": {
-    "getRawGraphs": "node -r esm getRawGraphs.js",
-    "processGraphs": "node -r esm processGraphs.js",
+    "getSequentialPatterns": "node -r esm getSequentialPatterns.js",
     "testPOSET": "node -r esm ./tests/testPOSET.js",
     "testFin": "node -r esm ./tests/testFin.js",
     "testSelector": "node -r esm ./tests/testSelector.js",
-    "testGSP": "node -r esm ./tests/testGSp.js"
+    "testSPM": "node -r esm ./tests/testSPM.js"
   },
   "keywords": [],
   "author": "Charles Cousyn",
