Adding first bricks to pruning of objects using wordnet, not sure it is worth it

--- a/configFiles/generalConfig.json
+++ b/configFiles/generalConfig.json
@@ -18,6 +18,7 @@
   "normOrStandOrByPage": "byPage",
   "minSupport": 0.3,
   "useVerb": true,
+  "pruningObjectsUsingWordnet": false,
   "useDepTreeToFindAssociatedVerb":  true,
   "useSpecificStruct": true,
   "closedMention": true,
