Adding possibility to search for closed patterns using VMSP

--- a/configFiles/generalConfig.json
+++ b/configFiles/generalConfig.json
@@ -22,5 +22,6 @@
   "useDepTreeToFindAssociatedVerb":  true,
   "useSpecificStruct": true,
   "closedMention": true,
-  "maximalMention": true
+  "maximalMention": true,
+  "maximalNotClosed": true
 }
