--- a/configFiles/generalConfig.json
+++ b/configFiles/generalConfig.json
@@ -16,7 +16,8 @@
   "indentRawFile": true,
   "indentProcessedFile": true,
   "normOrStandOrByPage": "byPage",
-  "minSupport": 0.1,
+  "minSupport": 0.15,
+  "minNumberPatterns": 1,
   "useVerb": true,
   "pruningObjectsUsingWordnet": false,
   "useDepTreeToFindAssociatedVerb":  true,
