--- a/configFiles/generalConfig.json
+++ b/configFiles/generalConfig.json
@@ -18,6 +18,7 @@
   "normOrStandOrByPage": "byPage",
   "minSupport": 0.15,
   "minNumberPatterns": 1,
+  "stepSupport": 0.01,
   "useVerb": true,
   "pruningObjectsUsingWordnet": false,
   "useDepTreeToFindAssociatedVerb":  true,
