--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "getSequentialPatterns.js",
   "scripts": {
     "main": "node -r esm main.js",
-    "experimentation": "node -r esm experimentation.js",
-    "patternAnnotation": "node -r esm patternAnnotation.js",
+    "getAllConf": "node -r esm experimentation/getAllConf.js",
+    "patternAnnotation": "node -r esm experimentation/patternAnnotation.js",
+    "prepareForJASP": "node -r esm experimentation/prepareForJASP.js",
     "testPOSET": "node -r esm ./tests/testPOSET.js",
     "testFin": "node -r esm ./tests/testFin.js",
     "testSelector": "node -r esm ./tests/testSelector.js",
@@ -30,6 +31,7 @@
     "jsdom": "^16.4.0",
     "lexed": "^1.0.10",
     "rxjs": "^6.6.3",
+    "uuid": "^3.4.0",
     "wait-console-input": "^0.1.7",
     "wordpos": "^2.1.0"
   }
