--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@stdlib/stdlib": "^0.0.93",
     "clone": "^2.1.2",
     "csv-parse": "^4.14.1",
+    "csv-stringify": "^5.6.2",
     "en-inflectors": "^1.0.12",
     "en-norm": "0.0.3",
     "en-parse": "^1.1.7",
