Adding minSupport criterion, date reviver in Tools and time spend to obtain activityResult

--- a/configFiles/experimentationConfig.json
+++ b/configFiles/experimentationConfig.json
@@ -5,6 +5,7 @@
     "verbAssociatorUsed": [true, false],
     "verbAssociatorProximityBasedOrSyntacticBased": [true, false],
     "hypernymMutation": [true, false],
-    "closedOrMaximalPattern": [true, false]
+    "closedOrMaximalPattern": [true, false],
+    "minSupport": [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9]
   }
 }
