--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "MIT",
   "dependencies": {
     "@stdlib/stdlib": "^0.0.93",
+    "array-shuffle": "^2.0.0",
     "clone": "^2.1.2",
     "csv-parse": "^4.14.1",
     "csv-stringify": "^5.6.2",
