Adding experimentation for pattern use, unfinished

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "prepareForJASP": "node -r esm experimentation/prepareForJASP.js",
     "patternSelection": "node -r esm patternSelection.js",
     "patternUse": "node -r esm patternUse.js",
+    "experimentationPatternUse": "node -r esm patternUse/experimentation.js",
+    "processDefaultNoActivityData": "node -r esm patternUse/processdefaultNoActivityData.js",
     "testPOSET": "node -r esm ./tests/testPOSET.js",
     "testFin": "node -r esm ./tests/testFin.js",
     "testSelector": "node -r esm ./tests/testSelector.js",
@@ -34,6 +36,7 @@
     "html-to-text": "^5.1.1",
     "jsdom": "^16.4.0",
     "lexed": "^1.0.10",
+    "nodeplotlib": "^0.7.5",
     "rxjs": "^6.6.3",
     "summary": "^2.1.0",
     "uuid": "^3.4.0",
