Adding all experimentation setup (untested)

--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "patternAnnotation": "node -r esm experimentation/patternAnnotation.js",
     "prepareForJASP": "node -r esm experimentation/prepareForJASP.js",
     "patternSelection": "node -r esm patternSelection.js",
-    "patternUse": "node -r esm patternUse.js",
-    "experimentationPatternUse": "node -r esm patternUse/experimentation.js",
-    "processDefaultNoActivityData": "node -r esm patternUse/processdefaultNoActivityData.js",
+    "patternUse": "node -r esm HAR.js",
+    "experimentationPatternUse": "node -r esm ./patternUse/experimentation.js",
+    "processDefaultNoActivityData": "node -r esm ./patternUse/processdefaultNoActivityData.js",
+    "calibrationRFIDPosition": "node -r esm ./patternUse/calibrationRFIDPosition.js",
     "testPOSET": "node -r esm ./tests/testPOSET.js",
     "testFin": "node -r esm ./tests/testFin.js",
     "testSelector": "node -r esm ./tests/testSelector.js",
+    "testCalibration": "node -r esm ./tests/testCalibration.js",
+    "testKmeans": "node -r esm ./tests/testKmeans.js",
     "testSPM": "node -r esm ./tests/testSPM.js",
     "testCorrelation": "node -r esm ./tests/testCorrelation.js",
     "testPatternsPerformance": "node -r esm ./tests/testPatternsPerformance.js"
@@ -37,6 +40,7 @@
     "jsdom": "^16.4.0",
     "lexed": "^1.0.10",
     "ml-confusion-matrix": "^0.4.0",
+    "node-kmeans": "^1.1.9",
     "nodeplotlib": "^0.7.5",
     "rxjs": "^6.6.3",
     "summary": "^2.1.0",
