Adding elements on cook_pasta dictionnary

--- a/patternUse/experimentationConfig.json
+++ b/patternUse/experimentationConfig.json
@@ -33,7 +33,8 @@
         ["Pasta", "pasta"],
         ["Plate", "plate"],
         ["Pan", "pan"],
-        ["Butter", "butter"]
+        ["Butter", "butter"],
+        ["Boiler", "water"]
       ]
     }
 }
