Adding make coffee activity data and first real results

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "testKmeans": "node -r esm ./tests/testKmeans.js",
     "testSPM": "node -r esm ./tests/testSPM.js",
     "testCorrelation": "node -r esm ./tests/testCorrelation.js",
-    "testPatternsPerformance": "node -r esm ./tests/testPatternsPerformance.js"
+    "testPatternsPerformance": "node -r esm ./tests/testPatternsPerformance.js",
+    "testPatternUseExperimentationAnalysis": "node -r esm ./tests/testPatternUseExperimentationAnalysis.js"
   },
   "keywords": [],
   "author": "Charles Cousyn",
