--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "testSPM": "node -r esm ./tests/testSPM.js",
     "testCorrelation": "node -r esm ./tests/testCorrelation.js",
     "testPatternsPerformance": "node -r esm ./tests/testPatternsPerformance.js",
-    "testPatternUseExperimentationAnalysis": "node -r esm ./tests/testPatternUseExperimentationAnalysis.js"
+    "testPatternUseExperimentationAnalysis": "node -r esm ./tests/testPatternUseExperimentationAnalysis.js",
+    "testTools": "node -r esm ./tests/testTools.js"
   },
   "keywords": [],
   "author": "Charles Cousyn",
