Adding support for choosing patterns to use and adding flexible paramters in config files

--- a/patternUse/experimentationConfig.json
+++ b/patternUse/experimentationConfig.json
@@ -1,9 +1,10 @@
 {
-  "parameters": ["useImageExtractorPatterns", "windowSizeObjectUse", "thresholdMinDistanceRFID", "thresholdMaxDistanceRFID", "windowSizeHAR"],
+  "parameters": ["useImageExtractorPatternsOrSPMPatterns", "windowSizeObjectUse", "thresholdMinDistanceRFID", "thresholdMaxDistanceRFID", "windowSizeHAR"],
   "testedValues": {
-    "useImageExtractorPatterns":
+    "useImageExtractorPatternsOrSPMPatterns":
     {
-      "type": "boolean"
+      "type": "enum",
+      "values": ["BOTH", "IMAGE_EXTRACTOR", "SPM"]
     },
     "windowSizeObjectUse":
     {
