--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "testFin": "node -r esm ./tests/testFin.js",
     "testSelector": "node -r esm ./tests/testSelector.js",
     "testCalibration": "node -r esm ./tests/testCalibration.js",
+    "testPerfPatternUse": "node -r esm ./tests/testPerfPatternUse.js",
     "testKmeans": "node -r esm ./tests/testKmeans.js",
     "testSPM": "node -r esm ./tests/testSPM.js",
     "testCorrelation": "node -r esm ./tests/testCorrelation.js",
